--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,5 +18,5 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  padding-top: 4rem;
+  /* padding-top: 4rem; */
 }
